--- a/.github/workflows/ths_spider.yml
+++ b/.github/workflows/ths_spider.yml
@@ -1,1 +1,37 @@
+name: THS Spider Runner
+on:
+  workflow_dispatch:    # 支持手动触发
+  schedule:
+    - cron: '0 4 * * *'    # 每天北京时间 12:00 运行
+
+jobs:
+  run-ths-spider:
+    runs-on: windows-latest    # 使用最新的Windows运行环境
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas playwright seatable-api
+          playwright install chromium
+          
+      - name: Run THS Spider
+        env:
+          SEATABLE_API_TOKEN: ${{ secrets.SEATABLE_API_TOKEN }}
+          SEATABLE_SERVER_URL: ${{ vars.SEATABLE_SERVER_URL }}
+        run: |
+          python data/lkx-ths.py
+          
+      - name: Handle errors
+        if: failure()
+        run: |
+          echo "Spider run failed, please check the logs"
 
