--- a/.github/workflows/ths_spider.yml
+++ b/.github/workflows/ths_spider.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   run-ths-spider:
-    runs-on: windows-latest    # 使用最新的Windows运行环境
+    runs-on: windows-latest
     
     steps:
       - name: Checkout code
@@ -15,12 +15,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.11'
           
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas playwright seatable-api
+          pip install pandas playwright seatable-api requests
           playwright install chromium
           
       - name: Run THS Spider
@@ -34,4 +34,5 @@ jobs:
         if: failure()
         run: |
           echo "Spider run failed, please check the logs"
+
 
